[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[project]
name = "pycases"
version = "0.1.3"
description = "A case conversion library with Unicode support"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "Ross MacArthur", email = "ross@macarthur.io" }]
readme = "README.md"
keywords = ["convert", "case", "snake", "camel", "pascal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/rossmacarthur/pycases"
Repository = "https://github.com/rossmacarthur/pycases"
